--- a/core/src/jquery/css/jquery.ocdialog.scss
+++ b/core/src/jquery/css/jquery.ocdialog.scss
@@ -17,6 +17,7 @@
 }
 .oc-dialog-title {
 	background: var(--color-main-background);
+	text-align: center;
 }
 .oc-dialog-buttonrow {
 	position: relative;
